--- a/index.html
+++ b/index.html
@@ -65,133 +65,96 @@
         <section class="register">
           <a class="btn" href="#" aria-label="Inscripción al congreso">Inscripción al congreso</a>
         </section>
-      </section>
 
+        <article class="program" aria-label="Programa – Jueves 2 de octubre">
+          <section class="sheet">
+            <div class="program-head">
+              <h2 class="program-day">JUEVES 2 DE OCTUBRE</h2>
+            </div>
+
+            <div class="block">
+              <div class="bar">Conferencia inaugural: codificación y tutela del contratante débil</div>
+              <div class="content">
+                <div class="row"><b>Conferencia:</b> Dr. Ricardo Lorenzetti. Universidad de Buenos Aires: Magistrado de la Corte Suprema de Justicia de Argentina: codificación y tutela del contratante débil.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Mesa 1ª: Autonomía privada y tutela del contratante débil</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Profesor Carlos Ignacio Jaramillo J. Universidad Javeriana.</div>
+                <div class="row"><b>Conferencia:</b> Profesor Eugenio Llamas Pombo. Universidad de Salamanca: <em>Autonomía privada y tutela del contratante débil</em>.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Mesa 2ª: Tutela del contratante débil frente a las cláusulas y a las prácticas abusivas</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Prof. Nieves Martínez Rodríguez. Universidad de Salamanca.</div>
+                <div class="row"><b>Conferencia:</b> Prof. William Namen Vargas. Prof. Universidad Externado. Exmagistrado de la Corte Suprema de Colombia. <em>Tutela del contratante débil frente a las cláusulas y a las prácticas abusivas</em>.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Mesa 3ª: Resarcimiento del daño causado al contratante débil</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Prof. Alfredo Tamayo Jaramillo. Universidad Pontificia Bolivariana.</div>
+                <div class="row"><b>Conferencia:</b> Prof. Aída Kemelmajer de Carlucci. exmagistrada de la Corte Suprema de Justicia de Mendoza, Argentina. <em>Resarcimiento del daño causado al contratante débil</em>.</div>
+              </div>
+            </div>
+          </section>
+        </article>
+
+        <article class="program" aria-label="Programa – Viernes 3 de octubre">
+          <section class="sheet">
+            <div class="program-head"><span class="program-day">VIERNES 3 DE OCTUBRE</span></div>
+
+            <div class="block">
+              <div class="bar">Mesa 4ª: Libre competencia y tutela del contratante débil</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Prof. José Luis Pérez-Serrabona González. Universidad de Granada.</div>
+                <div class="row"><b>Conferencia:</b> Prof.ssa. Tenella Sillani. Universidad de Milán. <em>Mercado competitivo y tutela del contratante débil</em>.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Mesa 5ª: Sobreendeudamiento y tutela del contratante débil</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Prof. Miguel Uribe Velásquez. Universidad Pontificia Bolivariana.</div>
+                <div class="row"><b>Conferencia:</b> Prof. Lorenzo Mezzasoma. Universidad de Perugia. <em>Sobreendeudamiento y tutela del contratante débil</em>.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Mesa 6ª: Protección del contratante débil, tecnología e inteligencia artificial</div>
+              <div class="content">
+                <div class="row"><b>Presidente:</b> Prof. Hernán Vélez. Universidad Pontificia Bolivariana.</div>
+                <div class="row"><b>Conferencia:</b> Jaime Alberto Arrubla Paucar. Decano de la Escuela de Derecho y Ciencias Políticas de la Universidad Pontificia Bolivariana y expresidente de la Corte Suprema de Justicia de Colombia. <em>Derecho y Tecnología</em>.</div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">Comunicaciones (Mesa Doctoral)</div>
+              <div class="content">
+                <div class="row"><b>Presiden:</b>
+                  Prof. Estrella Toral Lara. Universidad de Salamanca.<br/>
+                  Prof. Javier Pérez-Serrabona González. Universidad de Granada.<br/>
+                  Prof. Freddy Santamaría Velasco. Director de la Facultad de Ciencias Políticas de la UPB.
+                </div>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="bar">CONFERENCIA DE CLAUSURA</div>
+              <div class="content">
+                <div class="row"><b>Conferencia:</b> Dr. Octavio Augusto Tejeiro. Prof. Universidad Javeriana. Presidente de la Corte Suprema de Justicia de Colombia. <em>La Jurisprudencia de la Corte Suprema y la protección del contratante débil</em>.</div>
+              </div>
+            </div>
+          </section>
+        </article>
+      </section>
     </main>
 
-    <!-- ================= PAGE 2: PROGRAMA – JUEVES ================= -->
-    <article class="page" aria-label="Programa – Jueves 2 de octubre">
-      <section class="sheet">
-        <div class="block">
-          <div class="bar">Conferencia inaugural: codificación y tutela del contratante débil</div>
-          <div class="content">
-            <div class="row"><b>Conferencia:</b> Dr. Ricardo Lorenzetti. Universidad de Buenos Aires: Magistrado de la Corte Suprema de Justicia de Argentina: codificación y tutela del contratante débil.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Mesa 1ª: Autonomía privada y tutela del contratante débil</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Profesor Carlos Ignacio Jaramillo J. Universidad Javeriana.</div>
-            <div class="row"><b>Conferencia:</b> Profesor Eugenio Llamas Pombo. Universidad de Salamanca: <em>Autonomía privada y tutela del contratante débil</em>.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Mesa 2ª: Tutela del contratante débil frente a las cláusulas y a las prácticas abusivas</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Prof. Nieves Martínez Rodríguez. Universidad de Salamanca.</div>
-            <div class="row"><b>Conferencia:</b> Prof. William Namen Vargas. Prof. Universidad Externado. Exmagistrado de la Corte Suprema de Colombia. <em>Tutela del contratante débil frente a las cláusulas y a las prácticas abusivas</em>.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Mesa 3ª: Resarcimiento del daño causado al contratante débil</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Prof. Alfredo Tamayo Jaramillo. Universidad Pontificia Bolivariana.</div>
-            <div class="row"><b>Conferencia:</b> Prof. Aída Kemelmajer de Carlucci. exmagistrada de la Corte Suprema de Justicia de Mendoza, Argentina. <em>Resarcimiento del daño causado al contratante débil</em>.</div>
-          </div>
-        </div>
-
-        <p class="note">Para postulación a ser candidato para ponencias o comunicaciones, enviar sus escritos al correo <b>jana.rivera@upb.edu.co</b>, indicando además a cuál mesa se postula.</p>
-
-        <div class="bottom">
-          <div class="sponsors">
-            <div class="sponsor">Cámara de Comercio de Medellín</div>
-            <div class="sponsor">ACOLDESE</div>
-          </div>
-          <div style="justify-self:end; text-align:center">
-            <div class="qr"><img src="" alt="QR de inscripción (colocar imagen)"/></div>
-            <div style="margin-top:6px; font-weight:800; color:#d32b2b">¡Inscríbete!</div>
-          </div>
-        </div>
-      </section>
-    </article>
-
-    <!-- ================= PAGE 3: PROGRAMA – VIERNES ================= -->
-    <article class="page" aria-label="Programa – Viernes 3 de octubre">
-      <section class="sheet">
-        <div class="logos" aria-hidden="true" style="opacity:.85">
-          <div class="logo">Universidad de Salamanca</div>
-          <div class="logo">IVS Civile</div>
-          <div class="logo">UPB</div>
-          <div class="logo">Javeriana</div>
-          <div class="logo">SISDiC</div>
-        </div>
-        <header class="title" style="margin-top:-6px">
-          <div class="kicker">IV Congreso Internacional</div>
-          <div class="brand">IVS <em style="font-style:italic">Civile</em> Salmanticense</div>
-        </header>
-
-        <div class="program-head"><span class="pill">¡Convocatoria abierta para ponencias y comunicaciones!</span></div>
-        <div class="program-head"><span class="program-day">VIERNES 3 DE OCTUBRE</span></div>
-
-        <div class="block">
-          <div class="bar">Mesa 4ª: Libre competencia y tutela del contratante débil</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Prof. José Luis Pérez-Serrabona González. Universidad de Granada.</div>
-            <div class="row"><b>Conferencia:</b> Prof.ssa. Tenella Sillani. Universidad de Milán. <em>Mercado competitivo y tutela del contratante débil</em>.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Mesa 5ª: Sobreendeudamiento y tutela del contratante débil</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Prof. Miguel Uribe Velásquez. Universidad Pontificia Bolivariana.</div>
-            <div class="row"><b>Conferencia:</b> Prof. Lorenzo Mezzasoma. Universidad de Perugia. <em>Sobreendeudamiento y tutela del contratante débil</em>.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Mesa 6ª: Protección del contratante débil, tecnología e inteligencia artificial</div>
-          <div class="content">
-            <div class="row"><b>Presidente:</b> Prof. Hernán Vélez. Universidad Pontificia Bolivariana.</div>
-            <div class="row"><b>Conferencia:</b> Jaime Alberto Arrubla Paucar. Decano de la Escuela de Derecho y Ciencias Políticas de la Universidad Pontificia Bolivariana y expresidente de la Corte Suprema de Justicia de Colombia. <em>Derecho y Tecnología</em>.</div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">Comunicaciones (Mesa Doctoral)</div>
-          <div class="content">
-            <div class="row"><b>Presiden:</b>
-              Prof. Estrella Toral Lara. Universidad de Salamanca.<br/>
-              Prof. Javier Pérez-Serrabona González. Universidad de Granada.<br/>
-              Prof. Freddy Santamaría Velasco. Director de la Facultad de Ciencias Políticas de la UPB.
-            </div>
-          </div>
-        </div>
-
-        <div class="block">
-          <div class="bar">CONFERENCIA DE CLAUSURA</div>
-          <div class="content">
-            <div class="row"><b>Conferencia:</b> Dr. Octavio Augusto Tejeiro. Prof. Universidad Javeriana. Presidente de la Corte Suprema de Justicia de Colombia. <em>La Jurisprudencia de la Corte Suprema y la protección del contratante débil</em>.</div>
-          </div>
-        </div>
-
-        <p class="note">Para postulación a ser candidato para ponencias o comunicaciones, enviar sus escritos al correo <b>jana.rivera@upb.edu.co</b>, indicando además a cuál mesa se postula.</p>
-
-        <div class="bottom">
-          <div class="sponsors">
-            <div class="sponsor">Cámara de Comercio de Medellín</div>
-            <div class="sponsor">ACOLDESE</div>
-          </div>
-          <div style="justify-self:end; text-align:center">
-            <div class="qr"><img src="" alt="QR de inscripción (colocar imagen)"/></div>
-            <div style="margin-top:6px; font-weight:800; color:#d32b2b">¡Inscríbete!</div>
-          </div>
-        </div>
-      </section>
-    </article>
 
   </body>
 </html>
