--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 
         <article class="program" aria-label="Programa – Jueves 2 de octubre">
           <section class="sheet">
-            <div class="program-head">
+            <button class="program-head program-head-next">
               <h2 class="program-day">JUEVES 2 DE OCTUBRE</h2>
-            </div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
+            </button>
 
             <div class="block">
               <div class="bar">Conferencia inaugural: codificación y tutela del contratante débil</div>
@@ -105,49 +106,54 @@
           </section>
         </article>
 
-        <article class="program" aria-label="Programa – Viernes 3 de octubre">
+        <article class="program program-second" aria-label="Programa – Viernes 3 de octubre">
           <section class="sheet">
-            <div class="program-head"><span class="program-day">VIERNES 3 DE OCTUBRE</span></div>
+            <button class="program-head program-head-previous">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
+              <h2 class="program-day">VIERNES 3 DE OCTUBRE</h2>
+            </button>
 
-            <div class="block">
-              <div class="bar">Mesa 4ª: Libre competencia y tutela del contratante débil</div>
-              <div class="content">
-                <div class="row"><b>Presidente:</b> Prof. José Luis Pérez-Serrabona González. Universidad de Granada.</div>
-                <div class="row"><b>Conferencia:</b> Prof.ssa. Tenella Sillani. Universidad de Milán. <em>Mercado competitivo y tutela del contratante débil</em>.</div>
-              </div>
-            </div>
-
-            <div class="block">
-              <div class="bar">Mesa 5ª: Sobreendeudamiento y tutela del contratante débil</div>
-              <div class="content">
-                <div class="row"><b>Presidente:</b> Prof. Miguel Uribe Velásquez. Universidad Pontificia Bolivariana.</div>
-                <div class="row"><b>Conferencia:</b> Prof. Lorenzo Mezzasoma. Universidad de Perugia. <em>Sobreendeudamiento y tutela del contratante débil</em>.</div>
-              </div>
-            </div>
-
-            <div class="block">
-              <div class="bar">Mesa 6ª: Protección del contratante débil, tecnología e inteligencia artificial</div>
-              <div class="content">
-                <div class="row"><b>Presidente:</b> Prof. Hernán Vélez. Universidad Pontificia Bolivariana.</div>
-                <div class="row"><b>Conferencia:</b> Jaime Alberto Arrubla Paucar. Decano de la Escuela de Derecho y Ciencias Políticas de la Universidad Pontificia Bolivariana y expresidente de la Corte Suprema de Justicia de Colombia. <em>Derecho y Tecnología</em>.</div>
-              </div>
-            </div>
-
-            <div class="block">
-              <div class="bar">Comunicaciones (Mesa Doctoral)</div>
-              <div class="content">
-                <div class="row"><b>Presiden:</b>
-                  Prof. Estrella Toral Lara. Universidad de Salamanca.<br/>
-                  Prof. Javier Pérez-Serrabona González. Universidad de Granada.<br/>
-                  Prof. Freddy Santamaría Velasco. Director de la Facultad de Ciencias Políticas de la UPB.
+            <div class="events">
+              <div class="block">
+                <div class="bar">Mesa 4ª: Libre competencia y tutela del contratante débil</div>
+                <div class="content">
+                  <div class="row"><b>Presidente:</b> Prof. José Luis Pérez-Serrabona González. Universidad de Granada.</div>
+                  <div class="row"><b>Conferencia:</b> Prof.ssa. Tenella Sillani. Universidad de Milán. <em>Mercado competitivo y tutela del contratante débil</em>.</div>
                 </div>
               </div>
-            </div>
 
-            <div class="block">
-              <div class="bar">CONFERENCIA DE CLAUSURA</div>
-              <div class="content">
-                <div class="row"><b>Conferencia:</b> Dr. Octavio Augusto Tejeiro. Prof. Universidad Javeriana. Presidente de la Corte Suprema de Justicia de Colombia. <em>La Jurisprudencia de la Corte Suprema y la protección del contratante débil</em>.</div>
+              <div class="block">
+                <div class="bar">Mesa 5ª: Sobreendeudamiento y tutela del contratante débil</div>
+                <div class="content">
+                  <div class="row"><b>Presidente:</b> Prof. Miguel Uribe Velásquez. Universidad Pontificia Bolivariana.</div>
+                  <div class="row"><b>Conferencia:</b> Prof. Lorenzo Mezzasoma. Universidad de Perugia. <em>Sobreendeudamiento y tutela del contratante débil</em>.</div>
+                </div>
+              </div>
+
+              <div class="block">
+                <div class="bar">Mesa 6ª: Protección del contratante débil, tecnología e inteligencia artificial</div>
+                <div class="content">
+                  <div class="row"><b>Presidente:</b> Prof. Hernán Vélez. Universidad Pontificia Bolivariana.</div>
+                  <div class="row"><b>Conferencia:</b> Jaime Alberto Arrubla Paucar. Decano de la Escuela de Derecho y Ciencias Políticas de la Universidad Pontificia Bolivariana y expresidente de la Corte Suprema de Justicia de Colombia. <em>Derecho y Tecnología</em>.</div>
+                </div>
+              </div>
+
+              <div class="block">
+                <div class="bar">Comunicaciones (Mesa Doctoral)</div>
+                <div class="content">
+                  <div class="row"><b>Presiden:</b>
+                    Prof. Estrella Toral Lara. Universidad de Salamanca.<br/>
+                    Prof. Javier Pérez-Serrabona González. Universidad de Granada.<br/>
+                    Prof. Freddy Santamaría Velasco. Director de la Facultad de Ciencias Políticas de la UPB.
+                  </div>
+                </div>
+              </div>
+
+              <div class="block">
+                <div class="bar">CONFERENCIA DE CLAUSURA</div>
+                <div class="content">
+                  <div class="row"><b>Conferencia:</b> Dr. Octavio Augusto Tejeiro. Prof. Universidad Javeriana. Presidente de la Corte Suprema de Justicia de Colombia. <em>La Jurisprudencia de la Corte Suprema y la protección del contratante débil</em>.</div>
+                </div>
               </div>
             </div>
           </section>
