--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
     <main class="page" aria-label="Afiche principal">
       <section class="hero">
         <div class="logos" aria-label="Logos de universidades y redes">
-          <div class="logo">Universidad de Salamanca</div>
-          <div class="logo">IVS Civile<br/>Salmanticense</div>
-          <div class="logo">UPB</div>
-          <div class="logo">Pontificia Univ. Javeriana</div>
-          <div class="logo">SISDiC</div>
+          <div class="logo">
+            <img src="public/logos/universidad_salamanca.webp" alt="Logo Universidad de Salamanca" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/colegio_abogados_javerianos.png" alt="Logo Colegio Abogados Javerianos" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/upb.png" alt="Logo Universidad Pontificia Bolivariana" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/pontifica_universidad_javeriana.png" alt="Logo Pontificia Universidad Javeriana" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/sisdic.webp" alt="Logo SISDiC" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/ivs_civile_salamanticense.webp" alt="Logo IVS Civile Salamanticense" />
+          </div>
         </div>
 
         <header class="title">
@@ -158,7 +171,18 @@
             </div>
           </section>
         </article>
+
+        <div class="logos" aria-label="Logos de universidades y redes">
+          <h3>Apoyan</h3>
+          <div class="logo">
+            <img src="public/logos/camara_de_comercio.png" alt="Logo Camara de Comercio" />
+          </div>
+          <div class="logo">
+            <img src="public/logos/acoldese.jpeg" alt="Logo ACOLDESE" />
+          </div>
+        </div>
       </section>
+
     </main>
 
 
