--- a/index.html
+++ b/index.html
@@ -172,6 +172,64 @@
           </section>
         </article>
 
+        <section class="speakers-carousel" aria-label="Carrusel de ponentes">
+          <h2>Ponentes</h2>
+          <div class="carousel-container">
+            <button class="carousel-btn prev" aria-label="Anterior">&#8249;</button>
+            <div class="carousel-track">
+            </div>
+            <button class="carousel-btn next" aria-label="Siguiente" >&#8250;</button>
+          </div>
+        </section>
+        <script>
+          const speakerImageCount = 13;
+          const speakerImages = [];
+          for (let i = 1; i <= speakerImageCount; i++) {
+            speakerImages.push({
+              src: `public/speakers/${i}.webp`,
+              alt: `Ponente ${i}`
+            });
+          }
+
+          const track = document.querySelector('.carousel-track');
+          speakerImages.forEach(img => {
+            const div = document.createElement('div');
+
+            div.style.flex = "0 0 180px";
+            div.style.margin = "0 12px";
+            div.style.textAlign = "center";
+
+            div.innerHTML = `
+              <img src="${img.src}" alt="${img.alt}" class="carousel-image">
+              <div style="font-size:1rem; margin-top:0.25rem;">${img.alt}</div>
+            `;
+
+            track.appendChild(div);
+          });
+
+          let currentIndex = 0;
+          const visibleCount = window.innerWidth < 600 ? 1 : 4;
+          function updateCarousel() {
+            const itemWidth = track.children[0].offsetWidth + 24; // 24px margin
+            track.scrollTo({ left: currentIndex * itemWidth, behavior: 'smooth' });
+          }
+
+          document.querySelector('.carousel-btn.prev').addEventListener('click', () => {
+            currentIndex = Math.max(0, currentIndex - 1);
+            updateCarousel();
+          });
+          document.querySelector('.carousel-btn.next').addEventListener('click', () => {
+            currentIndex = Math.min(speakerImages.length - visibleCount, currentIndex + 1);
+            updateCarousel();
+          });
+
+          // Responsive: update visibleCount and reset scroll on resize
+          window.addEventListener('resize', () => {
+            currentIndex = 0;
+            updateCarousel();
+          });
+        </script>
+
         <div class="logos" aria-label="Logos de universidades y redes">
           <h3>Apoyan</h3>
           <div class="logo">
