--- a/index.html
+++ b/index.html
@@ -173,39 +173,68 @@
         </article>
 
         <section class="speakers-carousel" aria-label="Carrusel de ponentes">
-          <h2>Ponentes</h2>
+          <h2>Algunos de nuestros invitados</h2>
           <div class="carousel-container">
             <button class="carousel-btn prev" aria-label="Anterior">&#8249;</button>
             <div class="carousel-track">
+              <div class="carousel-item">
+                <img src="public/speakers/1.webp" alt="Ponente 1" class="carousel-image">
+                <div class="carousel-caption">Carlos Ignacio Jaramillo Jaramillo Pontificia Universidad Javeriana. Exmagistrado de la Corte Suprema de Colombia.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/2.webp" alt="Ponente 2" class="carousel-image">
+                <div class="carousel-caption">Decano de la Escuela de Derecho y Ciencias Políticas de la Universidad Pontificia Bolivariana y expresidente de la Corte Suprema de Justicia de Colombia.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/3.webp" alt="Ponente 3" class="carousel-image">
+                <div class="carousel-caption">William Namen Vargas. Universidad Externado. Exmagistrado de la Corte Suprema de Colombia.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/4.webp" alt="Ponente 4" class="carousel-image">
+                <div class="carousel-caption">Ricardo Lorenzetti. Universidad de Buenos Aires: Magistrado de la Corte Suprema de Justicia de Argentina</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/5.webp" alt="Ponente 5" class="carousel-image">
+                <div class="carousel-caption">Eugenio Llamas Pombo. Universidad de Salamanca</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/6.webp" alt="Ponente 6" class="carousel-image">
+                <div class="carousel-caption">Alfredo Tamayo Jaramillo. Universidad Pontificia Bolivariana.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/7.webp" alt="Ponente 7" class="carousel-image">
+                <div class="carousel-caption">Octavio Augusto Tejeiro. Prof. Universidad Javeriana. Presidente de la Corte Suprema de Justicia de Colombia.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/8.webp" alt="Ponente 8" class="carousel-image">
+                <div class="carousel-caption">Lorenzo Mezzasoma. Universidad de Perugia.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/9.webp" alt="Ponente 9" class="carousel-image">
+                <div class="carousel-caption">Aída Kemelmajer de Carlucci. exmagistrada de la Corte Suprema de Justicia de Mendoza, Argentina.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/10.webp" alt="Ponente 10" class="carousel-image">
+                <div class="carousel-caption">Nieves Martínez Rodríguez. Universidad de Salamanca.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/11.webp" alt="Ponente 11" class="carousel-image">
+                <div class="carousel-caption">Estrella Toral Lara. Universidad de Salamanca.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/12.webp" alt="Ponente 12" class="carousel-image">
+                <div class="carousel-caption">Tenella Sillani. Universidad de Milán.</div>
+              </div>
+              <div class="carousel-item">
+                <img src="public/speakers/13.webp" alt="Ponente 13" class="carousel-image">
+                <div class="carousel-caption">José Luis Pérez-Serrabona González. Universidad de Granada.</div>
+              </div>
             </div>
             <button class="carousel-btn next" aria-label="Siguiente" >&#8250;</button>
           </div>
         </section>
         <script>
-          const speakerImageCount = 13;
-          const speakerImages = [];
-          for (let i = 1; i <= speakerImageCount; i++) {
-            speakerImages.push({
-              src: `public/speakers/${i}.webp`,
-              alt: `Ponente ${i}`
-            });
-          }
-
           const track = document.querySelector('.carousel-track');
-          speakerImages.forEach(img => {
-            const div = document.createElement('div');
-
-            div.style.flex = "0 0 180px";
-            div.style.margin = "0 12px";
-            div.style.textAlign = "center";
-
-            div.innerHTML = `
-              <img src="${img.src}" alt="${img.alt}" class="carousel-image">
-              <div style="font-size:1rem; margin-top:0.25rem;">${img.alt}</div>
-            `;
-
-            track.appendChild(div);
-          });
 
           let currentIndex = 0;
           const visibleCount = window.innerWidth < 600 ? 1 : 4;
@@ -218,12 +247,12 @@
             currentIndex = Math.max(0, currentIndex - 1);
             updateCarousel();
           });
+
           document.querySelector('.carousel-btn.next').addEventListener('click', () => {
-            currentIndex = Math.min(speakerImages.length - visibleCount, currentIndex + 1);
+            currentIndex = Math.min(track.children.length - visibleCount, currentIndex + 1);
             updateCarousel();
           });
 
-          // Responsive: update visibleCount and reset scroll on resize
           window.addEventListener('resize', () => {
             currentIndex = 0;
             updateCarousel();
