Add subscription link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
 
         <section class="register">
-          <a class="btn" href="#" aria-label="Inscripción al congreso">Inscripción al congreso</a>
+          <a target="_blank" class="btn" href="https://forms.office.com/Pages/ResponsePage.aspx?id=D6uLYaQg402hDOIM7pa7NU7g94Jlzg9Onff0XsN8rdBUOFhENzVZT1FZMTNYMDA4ME9UN0VFSFNFUy4u" aria-label="Inscripción al congreso">Inscripción al congreso</a>
         </section>
 
         <article class="program" aria-label="Programa – Jueves 2 de octubre">
